Fixed a Problem where Images not showing in the Live Page

--- a/css/about.css
+++ b/css/about.css
@@ -49,7 +49,7 @@
     gap: 20px;
 }
 .aboutus-container{
-    background-image: url(/img/Frame\ 1000001998\ \(1\).png);
+    background-image: url(../img/Frame\ 1000001998\ \(1\).png);
     display: flex;
     justify-content: space-around;
     padding-top: 50px;
